# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /
 definitions:
+  handler.errorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   handler.idStruct:
     properties:
       id:
@@ -117,6 +122,10 @@ paths:
             items:
               $ref: '#/definitions/model.Actor'
             type: array
+        "500":
+          description: Failed to get all actors
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Get All Actors
@@ -140,11 +149,13 @@ paths:
         "200":
           description: OK
         "400":
-          description: Bad Request
-          schema: {}
+          description: Failed to decode request body. Invalid JSON
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal Server Error
-          schema: {}
+          description: Failed to delete actor
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Delete an actor
@@ -170,11 +181,13 @@ paths:
           schema:
             $ref: '#/definitions/handler.idStruct'
         "400":
-          description: Bad request
-          schema: {}
+          description: Failed to decode request body. Invalid JSON
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal server error
-          schema: {}
+          description: Failed to save actor
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Save an actor
@@ -198,11 +211,13 @@ paths:
         "200":
           description: OK
         "400":
-          description: Bad request
-          schema: {}
+          description: Failed to decode request body. Invalid JSON
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal server error
-          schema: {}
+          description: Failed to update actor
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Update actor
@@ -232,8 +247,9 @@ paths:
               type: array
             type: array
         "500":
-          description: Internal Server Error
-          schema: {}
+          description: Failed to get films with sort
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Get all films with sorting
@@ -259,13 +275,13 @@ paths:
           schema:
             type: string
         "400":
-          description: Bad request
+          description: Failed to decode request body. Invalid JSON
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal server error
+          description: Failed to delete film
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Delete a film by ID
@@ -293,8 +309,9 @@ paths:
               $ref: '#/definitions/model.Film'
             type: array
         "500":
-          description: Internal Server Error
-          schema: {}
+          description: Failed to get films by partial names
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Get films by partial name and actor
@@ -320,13 +337,13 @@ paths:
           schema:
             $ref: '#/definitions/handler.idStruct'
         "400":
-          description: Bad Request
+          description: Failed to decode request body. Invalid JSON
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal Server Error
+          description: Failed to save film
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Save film
@@ -352,13 +369,13 @@ paths:
           schema:
             type: string
         "400":
-          description: Bad Request
+          description: Failed to decode request body. Invalid JSON
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
         "500":
-          description: Internal Server Error
+          description: Failed to update film
           schema:
-            type: string
+            $ref: '#/definitions/handler.errorResponse'
       security:
       - ApiKeyAuth: []
       summary: Update a film
@@ -384,6 +401,14 @@ paths:
           description: token
           schema:
             type: string
+        "400":
+          description: Failed to decode request body. Invalid JSON
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
+        "500":
+          description: Failed to generate JWT
+          schema:
+            $ref: '#/definitions/handler.errorResponse'
       summary: SignIn
       tags:
       - auth
